Refactorizar, generar ejemplos en carpeta tests_generados

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ Resultados/
 /inspectionProfiles/Project_Default.xml
 /TP_TDA.iml
 /vcs.xml
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/TP_TDA.iml
+/.idea/vcs.xml
+/.idea/workspace.xml
